crates/carta/tests/snapshots/golden_writer__rtf__common__link-empty-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa180 \li0 \fi0 before {\field{\*\fldinst{HYPERLINK "http://example.com"}}{\fldrslt{\ul

}}}
 after\par}
