crates/carta/tests/snapshots/golden_writer__rtf__common__link-label-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa180 \li0 \fi0 Padding padding padding padding {\field{\*\fldinst{HYPERLINK "http://example.com/path"}}{\fldrslt{\ul
a multi word link label here
}}}
 and trailing words to push wrapping.\par}
