crates/carta/tests/snapshots/golden_writer__rtf__common__link-url-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa180 \li0 \fi0 {\field{\*\fldinst{HYPERLINK "http://example.com/a%20b#frag"}}{\fldrslt{\ul
x
}}}
\par}
