crates/carta/tests/snapshots/golden_writer__rtf__common__list-nested-first-block.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa0 \li720 \fi-360 \bullet \tx360\tab \endash \tx360\tab inner one\par}
{\pard \ql \f0 \sa0 \li720 \fi-360 \endash \tx360\tab inner two\sa180\par}
{\pard \ql \f0 \sa0 \li360 \fi-360 \bullet \tx360\tab outer two\sa180\par}
