crates/carta/tests/snapshots/golden_writer__rtf__common__nested-emphasis.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa180 \li0 \fi0 {\i emph with {\b strong} inside} end\par}
