crates/carta/tests/snapshots/golden_writer__rtf__common__ordered-example.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{\pard \ql \f0 \sa0 \li360 \fi-360 (1)\tx360\tab first\par}
{\pard \ql \f0 \sa0 \li360 \fi-360 (2)\tx360\tab second\sa180\par}
